--- a/pom.xml
+++ b/pom.xml
@@ -12,17 +12,17 @@
         <relativePath />
     </parent>
 
-    <groupId>de.qbic.xml_edit</groupId>        <!-- FIXME: Your organization groupId here -->
-    <artifactId>XML_Editor</artifactId> <!-- FIXME: Your project artifactId here   -->
+    <groupId>de.qbic</groupId>        <!-- FIXME: Your organization groupId here -->
+    <artifactId>OpenImage</artifactId> <!-- FIXME: Your project artifactId here   -->
     <version>1</version>
 
-    <name>OME_XML_Meta_Data_Editor</name>                                               <!-- FIXME: Your project name here          -->
+    <name>Gauss Filtering</name>                                               <!-- FIXME: Your project name here          -->
     <description>A Maven project implementing an ImageJ command.</description> <!-- FIXME: Your project description here   -->
     <url>https://mycompany.com/imagej/gauss-filtering/</url>                   <!-- FIXME: Your project website here       -->
-    <inceptionYear>2022</inceptionYear>                                        <!-- FIXME: Your project starting year here -->
+    <inceptionYear>2017</inceptionYear>                                        <!-- FIXME: Your project starting year here -->
     <organization>
-        <name>QBiC</name>           <!-- FIXME: Your organization name here    -->
-        <url>https://uni-tuebingen.de/forschung/forschungsinfrastruktur/zentrum-fuer-quantitative-biologie-qbic/</url> <!-- FIXME: Your organization website here -->
+        <name>My Company</name>           <!-- FIXME: Your organization name here    -->
+        <url>https://mycompany.com/</url> <!-- FIXME: Your organization website here -->
     </organization>
     <licenses>
         <license>                         <!-- FIXME: Your license here -->
@@ -35,9 +35,9 @@
     <developers>
         <!-- See https://imagej.net/Team -->
         <developer>
-            <id>ar0it</id>                                          <!-- FIXME: Your GitHub handle here -->
-            <name>Aaron Riedling</name>                            <!-- FIXME: Your name here          -->
-            <url>https://github.com/ar0it</url> <!-- FIXME: Your website here       -->
+            <id>octocat</id>                                          <!-- FIXME: Your GitHub handle here -->
+            <name>Noma Onomatopoeia</name>                            <!-- FIXME: Your name here          -->
+            <url>https://mycompany.com/people/noma-onomatopoeia</url> <!-- FIXME: Your website here       -->
             <roles>
                 <role>founder</role>
                 <role>lead</role>
@@ -77,8 +77,8 @@
     </ciManagement>
 
     <properties>
-        <package-name>com.mycompany.imagej</package-name>                   <!-- FIXME: Your project package prefix here -->
-        <main-class>de.qbic.xml_edit.XML_Editor</main-class>        <!-- FIXME: Your project main class here, or delete for none -->
+        <package-name>de.qbic.xml_edit</package-name>                   <!-- FIXME: Your project package prefix here -->
+        <main-class>de.qbic.xml_edit.OpenImage</main-class>        <!-- FIXME: Your project main class here, or delete for none -->
         <license.licenseName>cc0</license.licenseName>                      <!-- FIXME: Your license-maven-plugin license code here -->
         <license.copyrightOwners>My Company, Inc.</license.copyrightOwners> <!-- FIXME: Your organization legal entity name here -->
     </properties>
@@ -96,14 +96,9 @@
             <artifactId>imagej</artifactId>
         </dependency>
         <dependency>
-            <groupId>ijaux</groupId>
-            <artifactId>pixlib</artifactId>
-            <version>0.8.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.scif</groupId>
-            <artifactId>scifio-ome-xml</artifactId>
-            <version>0.17.2-SNAPSHOT</version>
+            <groupId>ome</groupId>
+            <artifactId>bio-formats_plugins</artifactId>
+            <version>6.1.1</version>
         </dependency>
     </dependencies>
 </project>
