--- a/pom.xml
+++ b/pom.xml
@@ -100,5 +100,10 @@
             <artifactId>bio-formats_plugins</artifactId>
             <version>6.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>ome</groupId>
+            <artifactId>bioformats_package</artifactId>
+            <version>6.5.1</version>
+        </dependency>
     </dependencies>
 </project>
