Clean up, tested as Fiji plugin

--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,10 @@
     </parent>
 
     <groupId>de.qbic</groupId>        <!-- FIXME: Your organization groupId here -->
-    <artifactId>OpenImage</artifactId> <!-- FIXME: Your project artifactId here   -->
+    <artifactId>Editor</artifactId> <!-- FIXME: Your project artifactId here   -->
     <version>1</version>
 
-    <name>Gauss Filtering</name>                                               <!-- FIXME: Your project name here          -->
+    <name>XML Editor</name>                                               <!-- FIXME: Your project name here          -->
     <description>A Maven project implementing an ImageJ command.</description> <!-- FIXME: Your project description here   -->
     <url>https://mycompany.com/imagej/gauss-filtering/</url>                   <!-- FIXME: Your project website here       -->
     <inceptionYear>2017</inceptionYear>                                        <!-- FIXME: Your project starting year here -->
@@ -78,7 +78,7 @@
 
     <properties>
         <package-name>de.qbic.xml_edit</package-name>                   <!-- FIXME: Your project package prefix here -->
-        <main-class>de.qbic.xml_edit.OpenImage</main-class>        <!-- FIXME: Your project main class here, or delete for none -->
+        <main-class>de.qbic.xml_edit.XMLEditor</main-class>        <!-- FIXME: Your project main class here, or delete for none -->
         <license.licenseName>cc0</license.licenseName>                      <!-- FIXME: Your license-maven-plugin license code here -->
         <license.copyrightOwners>My Company, Inc.</license.copyrightOwners> <!-- FIXME: Your organization legal entity name here -->
     </properties>
@@ -99,11 +99,6 @@
             <groupId>ome</groupId>
             <artifactId>bio-formats_plugins</artifactId>
             <version>6.1.1</version>
-        </dependency>
-        <dependency>
-            <groupId>ome</groupId>
-            <artifactId>bioformats_package</artifactId>
-            <version>6.5.1</version>
         </dependency>
         <dependency>
             <groupId>com.formdev</groupId>
