--- a/pom.xml
+++ b/pom.xml
@@ -36,12 +36,39 @@
                     </execution>
                 </executions>
             </plugin>
+            <!--plugin>
+                <groupId>org.apache.xmlbeans</groupId>
+                <artifactId>xmlbeans</artifactId>
+                <version>4.0.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <sourceSchemas>
+                        <sourceSchema>data/ome.xsd</sourceSchema>
+                    </sourceSchemas>
+                    <name>omeSchema</name>
+                    <repackage>my.company.project.metadata</repackage>
+                    <partialMethods>ALL,-GET_LIST,-XGET_LIST,-XGET_ARRAY</partialMethods>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.xmlbeans</groupId>
+                        <artifactId>xmlbeans</artifactId>
+                        <version>5.1.1</version>
+                    </dependency>
+                </dependencies>
+            </plugin-->
         </plugins>
     </build>
 
     <groupId>de.qbic</groupId>        <!-- FIXME: Your organization groupId here -->
-    <artifactId>Editor</artifactId> <!-- FIXME: Your project artifactId here   -->
-    <version>1</version>
+    <artifactId>XMLEditor</artifactId> <!-- FIXME: Your project artifactId here   -->
+    <version>20_04_23</version>
 
     <name>XML Editor</name>                                               <!-- FIXME: Your project name here          -->
     <description>A Maven project implementing an ImageJ command.</description> <!-- FIXME: Your project description here   -->
@@ -76,6 +103,7 @@
             </roles>
         </developer>
     </developers>
+
     <contributors>
         <contributor>
             <name>None</name>
@@ -95,10 +123,12 @@
         <tag>HEAD</tag>
         <url>https://github.com/imagej/example-imagej2-command</url>
     </scm>
+
     <issueManagement>
         <system>GitHub Issues</system>
         <url>https://github.com/imagej/example-imagej2-command/issues</url>
     </issueManagement>
+
     <ciManagement>
         <system>None</system>
     </ciManagement>
@@ -127,7 +157,6 @@
             <artifactId>bio-formats_plugins</artifactId>
             <version>6.1.1</version>
         </dependency>
-
         <dependency>
             <groupId>com.formdev</groupId>
             <artifactId>flatlaf</artifactId>
@@ -138,7 +167,7 @@
             <artifactId>batik-transcoder</artifactId>
             <version>1.16</version>
         </dependency>
-        <dependency>
+        <!--dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
             <version>2.3.1</version>
@@ -147,17 +176,30 @@
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
             <version>2.3.1</version>
-        </dependency>
-        <dependency>
+        </dependency-->
+
+        <!-- https://mvnrepository.com/artifact/com.sun.istack/istack-commons-runtime -->
+        <!--dependency>
+            <groupId>com.sun.istack</groupId>
+            <artifactId>istack-commons-runtime</artifactId>
+            <version>4.2.0</version>
+        </dependency-->
+
+        <!--dependency>
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
             <version>3.25.0-GA</version>
+        </dependency-->
+        <!-- https://mvnrepository.com/artifact/org.apache.xmlbeans/xmlbeans -->
+        <dependency>
+            <groupId>org.apache.xmlbeans</groupId>
+            <artifactId>xmlbeans</artifactId>
+            <version>5.1.1</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>markdown</artifactId>
             <version>0.1.45</version>
         </dependency>
-
     </dependencies>
 </project>
