--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <configuration>
-                    <createDependencyReducedPom>false</createDependencyReducedPom>
+                    <transformers>
+                        <transformer
+                          implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                            <mainClass>life.qbic.xmledit.Main</mainClass>
+                        </transformer>
+                    </transformers>
+                    <createDependencyReducedPom>true</createDependencyReducedPom>
                     <artifactSet>
                         <includes>
                             <include>org.apache.xmlgraphics:batik-transcoder</include>
